@@ -1,11 +1,11 @@
 /*
- * Copyright 2023-2023 the original author or authors.
+ * Copyright 2023-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ * https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,16 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.springframework.ai.vectorstore;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
 import com.alibaba.fastjson.JSONObject;
+import io.micrometer.observation.ObservationRegistry;
 import io.milvus.client.MilvusServiceClient;
 import io.milvus.common.clientenum.ConsistencyLevelEnum;
 import io.milvus.grpc.DataType;
@@ -37,7 +31,6 @@ import io.milvus.param.RpcStatus;
 import io.milvus.param.collection.CreateCollectionParam;
 import io.milvus.param.collection.DropCollectionParam;
 import io.milvus.param.collection.FieldType;
-import io.milvus.param.collection.FlushParam;
 import io.milvus.param.collection.HasCollectionParam;
 import io.milvus.param.collection.LoadCollectionParam;
 import io.milvus.param.collection.ReleaseCollectionParam;
@@ -51,16 +44,34 @@ import io.milvus.response.QueryResultsWrapper.RowRecord;
 import io.milvus.response.SearchResultsWrapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import org.springframework.ai.document.Document;
-import org.springframework.ai.embedding.EmbeddingClient;
+import org.springframework.ai.embedding.BatchingStrategy;
+import org.springframework.ai.embedding.EmbeddingModel;
+import org.springframework.ai.embedding.EmbeddingOptionsBuilder;
+import org.springframework.ai.embedding.TokenCountBatchingStrategy;
+import org.springframework.ai.model.EmbeddingUtils;
+import org.springframework.ai.observation.conventions.VectorStoreProvider;
+import org.springframework.ai.observation.conventions.VectorStoreSimilarityMetric;
+import org.springframework.ai.vectorstore.filter.FilterExpressionConverter;
+import org.springframework.ai.vectorstore.observation.AbstractObservationVectorStore;
+import org.springframework.ai.vectorstore.observation.VectorStoreObservationContext;
+import org.springframework.ai.vectorstore.observation.VectorStoreObservationConvention;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.util.Assert;
+import org.springframework.util.StringUtils;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * @author Christian Tzolov
+ * @author Soby Chacko
+ * @author Thomas Vitale
  */
-public class MilvusVectorStore implements VectorStore, InitializingBean {
+public class MilvusVectorStore extends AbstractObservationVectorStore implements InitializingBean {
 
 	private static final Logger logger = LoggerFactory.getLogger(MilvusVectorStore.class);
 
@@ -83,14 +94,20 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 	// Metadata, automatically assigned by Milvus.
 	public static final String DISTANCE_FIELD_NAME = "distance";
 
-	public static final List<String> SEARCH_OUTPUT_FIELDS = Arrays.asList(DOC_ID_FIELD_NAME, CONTENT_FIELD_NAME,
+	public static final List<String> SEARCH_OUTPUT_FIELDS = List.of(DOC_ID_FIELD_NAME, CONTENT_FIELD_NAME,
 			METADATA_FIELD_NAME);
+
+	public final FilterExpressionConverter filterExpressionConverter = new MilvusFilterExpressionConverter();
 
 	private final MilvusServiceClient milvusClient;
 
-	private final EmbeddingClient embeddingClient;
+	private final EmbeddingModel embeddingModel;
 
 	private final MilvusVectorStoreConfig config;
+
+	private final boolean initializeSchema;
+
+	private final BatchingStrategy batchingStrategy;
 
 	/**
 	 * Configuration for the Milvus vector store.
@@ -122,7 +139,6 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 		 * {@return the default config}
 		 */
 		public static MilvusVectorStoreConfig defaultConfig() {
-
 			return builder().build();
 		}
 
@@ -145,7 +161,7 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 
 			private IndexType indexType = IndexType.IVF_FLAT;
 
-			private MetricType metricType = MetricType.L2;
+			private MetricType metricType = MetricType.COSINE;
 
 			private String indexParameters = "{\"nlist\":1024}";
 
@@ -154,13 +170,14 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 
 			/**
 			 * Configures the Milvus metric type to use. Leave {@literal null} or blank to
-			 * use the metric metric.
+			 * use the metric metric: https://milvus.io/docs/metric.md#floating
 			 * @param metricType the metric type to use
 			 * @return this builder
 			 */
 			public Builder withMetricType(MetricType metricType) {
 				Assert.notNull(metricType, "Collection Name must not be empty");
-				Assert.isTrue(metricType == MetricType.IP || metricType == MetricType.L2,
+				Assert.isTrue(
+						metricType == MetricType.IP || metricType == MetricType.L2 || metricType == MetricType.COSINE,
 						"Only the text metric types IP and L2 are supported");
 
 				this.metricType = metricType;
@@ -219,8 +236,8 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 			 */
 			public Builder withEmbeddingDimension(int newEmbeddingDimension) {
 
-				Assert.isTrue(newEmbeddingDimension >= 1 && newEmbeddingDimension <= 2048,
-						"Dimension has to be withing the boundaries 1 and 2048 (inclusively)");
+				Assert.isTrue(newEmbeddingDimension >= 1 && newEmbeddingDimension <= 32768,
+						"Dimension has to be withing the boundaries 1 and 32768 (inclusively)");
 
 				this.embeddingDimension = newEmbeddingDimension;
 				return this;
@@ -237,23 +254,40 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 
 	}
 
-	public MilvusVectorStore(MilvusServiceClient milvusClient, EmbeddingClient embeddingClient) {
-		this(milvusClient, embeddingClient, MilvusVectorStoreConfig.defaultConfig());
+	public MilvusVectorStore(MilvusServiceClient milvusClient, EmbeddingModel embeddingModel,
+			boolean initializeSchema) {
+		this(milvusClient, embeddingModel, MilvusVectorStoreConfig.defaultConfig(), initializeSchema,
+				new TokenCountBatchingStrategy());
 	}
 
-	public MilvusVectorStore(MilvusServiceClient milvusClient, EmbeddingClient embeddingClient,
-			MilvusVectorStoreConfig config) {
+	public MilvusVectorStore(MilvusServiceClient milvusClient, EmbeddingModel embeddingModel, boolean initializeSchema,
+			BatchingStrategy batchingStrategy) {
+		this(milvusClient, embeddingModel, MilvusVectorStoreConfig.defaultConfig(), initializeSchema, batchingStrategy);
+	}
+
+	public MilvusVectorStore(MilvusServiceClient milvusClient, EmbeddingModel embeddingModel,
+			MilvusVectorStoreConfig config, boolean initializeSchema, BatchingStrategy batchingStrategy) {
+		this(milvusClient, embeddingModel, config, initializeSchema, batchingStrategy, ObservationRegistry.NOOP, null);
+	}
+
+	public MilvusVectorStore(MilvusServiceClient milvusClient, EmbeddingModel embeddingModel,
+			MilvusVectorStoreConfig config, boolean initializeSchema, BatchingStrategy batchingStrategy,
+			ObservationRegistry observationRegistry, VectorStoreObservationConvention customObservationConvention) {
+
+		super(observationRegistry, customObservationConvention);
+		this.initializeSchema = initializeSchema;
 
 		Assert.notNull(milvusClient, "MilvusServiceClient must not be null");
-		Assert.notNull(milvusClient, "EmbeddingClient must not be null");
+		Assert.notNull(milvusClient, "EmbeddingModel must not be null");
 
 		this.milvusClient = milvusClient;
-		this.embeddingClient = embeddingClient;
+		this.embeddingModel = embeddingModel;
 		this.config = config;
+		this.batchingStrategy = batchingStrategy;
 	}
 
 	@Override
-	public void add(List<Document> documents) {
+	public void doAdd(List<Document> documents) {
 
 		Assert.notNull(documents, "Documents must not be null");
 
@@ -262,15 +296,16 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 		List<JSONObject> metadataArray = new ArrayList<>();
 		List<List<Float>> embeddingArray = new ArrayList<>();
 
-		for (Document document : documents) {
-			List<Double> embedding = this.embeddingClient.embed(document);
+		// TODO: Need to customize how we pass the embedding options
+		this.embeddingModel.embed(documents, EmbeddingOptionsBuilder.builder().build(), this.batchingStrategy);
 
+		for (Document document : documents) {
 			docIdArray.add(document.getId());
 			// Use a (future) DocumentTextLayoutFormatter instance to extract
 			// the content used to compute the embeddings
 			contentArray.add(document.getContent());
 			metadataArray.add(new JSONObject(document.getMetadata()));
-			embeddingArray.add(toFloatList(embedding));
+			embeddingArray.add(EmbeddingUtils.toList(document.getEmbedding()));
 		}
 
 		List<InsertParam.Field> fields = new ArrayList<>();
@@ -289,14 +324,10 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 		if (status.getException() != null) {
 			throw new RuntimeException("Failed to insert:", status.getException());
 		}
-		this.milvusClient.flush(FlushParam.newBuilder()
-			.withDatabaseName(this.config.databaseName)
-			.addCollectionName(this.config.collectionName)
-			.build());
 	}
 
 	@Override
-	public Optional<Boolean> delete(List<String> idList) {
+	public Optional<Boolean> doDelete(List<String> idList) {
 		Assert.notNull(idList, "Document id list must not be null");
 
 		String deleteExpression = String.format("%s in [%s]", DOC_ID_FIELD_NAME,
@@ -316,32 +347,29 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 	}
 
 	@Override
-	public List<Document> similaritySearch(String query) {
-		return this.similaritySearch(query, 4);
-	}
+	public List<Document> doSimilaritySearch(SearchRequest request) {
 
-	@Override
-	public List<Document> similaritySearch(String query, int topK) {
-		return similaritySearch(query, topK, 0.0D);
-	}
+		String nativeFilterExpressions = (request.getFilterExpression() != null)
+				? this.filterExpressionConverter.convertExpression(request.getFilterExpression()) : "";
 
-	@Override
-	public List<Document> similaritySearch(String query, int topK, double similarityThreshold) {
-		Assert.notNull(query, "Query string must not be null");
+		Assert.notNull(request.getQuery(), "Query string must not be null");
 
-		List<Double> embedding = this.embeddingClient.embed(query);
+		float[] embedding = this.embeddingModel.embed(request.getQuery());
 
-		SearchParam searchParam = SearchParam.newBuilder()
+		var searchParamBuilder = SearchParam.newBuilder()
 			.withCollectionName(this.config.collectionName)
 			.withConsistencyLevel(ConsistencyLevelEnum.STRONG)
 			.withMetricType(this.config.metricType)
 			.withOutFields(SEARCH_OUTPUT_FIELDS)
-			.withTopK(topK)
-			.withVectors(List.of(toFloatList(embedding)))
-			.withVectorFieldName(EMBEDDING_FIELD_NAME)
-			.build();
+			.withTopK(request.getTopK())
+			.withVectors(List.of(EmbeddingUtils.toList(embedding)))
+			.withVectorFieldName(EMBEDDING_FIELD_NAME);
 
-		R<SearchResults> respSearch = milvusClient.search(searchParam);
+		if (StringUtils.hasText(nativeFilterExpressions)) {
+			searchParamBuilder.withExpr(nativeFilterExpressions);
+		}
+
+		R<SearchResults> respSearch = milvusClient.search(searchParamBuilder.build());
 
 		if (respSearch.getException() != null) {
 			throw new RuntimeException("Search failed!", respSearch.getException());
@@ -349,9 +377,9 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 
 		SearchResultsWrapper wrapperSearch = new SearchResultsWrapper(respSearch.getData().getResults());
 
-		return wrapperSearch.getRowRecords()
+		return wrapperSearch.getRowRecords(0)
 			.stream()
-			.filter(rowRecord -> getResultSimilarity(rowRecord) >= similarityThreshold)
+			.filter(rowRecord -> getResultSimilarity(rowRecord) >= request.getSimilarityThreshold())
 			.map(rowRecord -> {
 				String docId = (String) rowRecord.get(DOC_ID_FIELD_NAME);
 				String content = (String) rowRecord.get(CONTENT_FIELD_NAME);
@@ -365,11 +393,8 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 
 	private float getResultSimilarity(RowRecord rowRecord) {
 		Float distance = (Float) rowRecord.get(DISTANCE_FIELD_NAME);
-		return (this.config.metricType == MetricType.IP) ? distance : (1 - distance);
-	}
-
-	private List<Float> toFloatList(List<Double> embeddingDouble) {
-		return embeddingDouble.stream().map(Number::floatValue).toList();
+		return (this.config.metricType == MetricType.IP || this.config.metricType == MetricType.COSINE) ? distance
+				: (1 - distance);
 	}
 
 	// ---------------------------------------------------------------------------------
@@ -377,6 +402,11 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 	// ---------------------------------------------------------------------------------
 	@Override
 	public void afterPropertiesSet() throws Exception {
+
+		if (!this.initializeSchema) {
+			return;
+		}
+
 		this.createCollection();
 	}
 
@@ -478,13 +508,13 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 			return this.config.embeddingDimension;
 		}
 		try {
-			int embeddingDimensions = this.embeddingClient.dimensions();
+			int embeddingDimensions = this.embeddingModel.dimensions();
 			if (embeddingDimensions > 0) {
 				return embeddingDimensions;
 			}
 		}
 		catch (Exception e) {
-			logger.warn("Failed to obtain the embedding dimensions from the embedding client and fall backs to default:"
+			logger.warn("Failed to obtain the embedding dimensions from the embedding model and fall backs to default:"
 					+ this.config.embeddingDimension, e);
 		}
 		return OPENAI_EMBEDDING_DIMENSION_SIZE;
@@ -515,6 +545,28 @@ public class MilvusVectorStore implements VectorStore, InitializingBean {
 		if (status.getException() != null) {
 			throw new RuntimeException("Drop Collection failed!", status.getException());
 		}
+	}
+
+	@Override
+	public org.springframework.ai.vectorstore.observation.VectorStoreObservationContext.Builder createObservationContextBuilder(
+			String operationName) {
+
+		return VectorStoreObservationContext.builder(VectorStoreProvider.MILVUS.value(), operationName)
+			.withCollectionName(this.config.collectionName)
+			.withDimensions(this.embeddingModel.dimensions())
+			.withSimilarityMetric(getSimilarityMetric())
+			.withNamespace(this.config.databaseName);
+	}
+
+	private static Map<MetricType, VectorStoreSimilarityMetric> SIMILARITY_TYPE_MAPPING = Map.of(MetricType.COSINE,
+			VectorStoreSimilarityMetric.COSINE, MetricType.L2, VectorStoreSimilarityMetric.EUCLIDEAN, MetricType.IP,
+			VectorStoreSimilarityMetric.DOT);
+
+	private String getSimilarityMetric() {
+		if (!SIMILARITY_TYPE_MAPPING.containsKey(this.config.metricType)) {
+			return this.config.metricType.name();
+		}
+		return SIMILARITY_TYPE_MAPPING.get(this.config.metricType).value();
 	}
 
 }
